components/ua/users-v2/overlays/prod/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-office-web-service-v2
spec:
  template:
    spec:
      volumes:
        - name: liquibase-config
          configMap:
            name: users-db-updater-config
      containers:
        - name: user-office-web-service
          # version: 2.6.0-alpha
          image: ghcr.io/isisbusapps/user-office-web-service@sha256:f22df103ef49c308f2bb19a69f68a480ce4db5c35c40b08428b5b44cea6480c1
