components/ua/users-v2/overlays/prod/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-office-web-service-v2
spec:
  template:
    spec:
#      initContainers:
#        - name: db-updater
#          image: ghcr.io/isisbusapps/users-db-updater:prod
#          args: ["update"]
#          env:
#            - name: LIQUIBASE_COMMAND_URL
#              valueFrom:
#                secretKeyRef:
#                  name: user-office-web-service-v2
#                  key: DB_URL
#            - name: LIQUIBASE_COMMAND_USERNAME
#              valueFrom:
#                secretKeyRef:
#                  name: user-office-web-service-v2
#                  key: DB_USERNAME
#            - name: LIQUIBASE_COMMAND_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: user-office-web-service-v2
#                  key: DB_PASSWORD
#            - name: DEPLOYMENT_NAME
#              value: "users-v2-prod"
#            - name: AUTHOR
#              value: "kubernetes"
#          volumeMounts:
#            - name: liquibase-config
#              mountPath: /liquibase/liquibase.docker.properties
#              subPath: liquibase.docker.properties
#              readOnly: true
#      volumes:
#        - name: liquibase-config
#          configMap:
#            name: users-db-updater-config
      containers:
        - name: user-office-web-service
          # version: v2.2.0-alpha
          image: ghcr.io/isisbusapps/user-office-web-service:v2.2.0-alpha
